--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_MantenimientoTrabajador.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_MantenimientoTrabajador.cshtml
@@ -18,6 +18,7 @@
     {
         @Html.AntiForgeryToken()
         @Html.HiddenFor(model => model.I_TrabajadorID)
+        @Html.HiddenFor(model => model.I_PersonaID)
         <div class="form-row">
             <div class="col-2">
                 <div class="form-group">
