--- a/src/app/00078-GestionPlanillas/WebApp/Views/Planillas/Generar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Planillas/Generar.cshtml
@@ -51,23 +51,8 @@
                                 
                                 <div class="form-group col-lg-3 col-md-4 col-6">
                                     <label for="idCategoria">Categoria</label>
-                                    <select id="idCategoria" name="idCategoria" class="form-control text-uppercase">
-                                        <option value="1">Haberes Administrativo</option>
-                                        <option value="2">Haberes Docente</option>
-                                        <option value="3">Haberes Médico</option>
-                                        <option value="4">Pensiones</option>
-                                        <option value="5">CAFAE</option>
-                                        <option value="6">Docente Investigador</option>
-                                        <option value="7">Practicante</option>
-                                        <option value="8">Productividad</option>
-                                        <option value="9">Generadora de Recursos</option>
-                                    </select>
+                                    @Html.DropDownList("idCategoria", ViewBag.ListaCategoriasPlanillas as SelectList, new { @class = "form-control text-uppercase" })
                                 </div>
-
-                                @*<div class="form-group col-lg-2 col-md-4 col-6">
-                                    <label for="tipoEstudio">Tipo de estudio</label>
-                                    @Html.DropDownListFor(model => model.tipoEstudio, ViewBag.TipoEstudios as SelectList, new { @class = "form-control form-control-sm text-uppercase" })
-                                </div>*@
 
                                 <div class="form-group col-lg-3 col-6">
                                     <label>&nbsp;</label>
