--- a/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
@@ -3,22 +3,22 @@
     <ul class="nav side-nav">
         <li class="nav-item"><a href="@Url.Action("Index", "Home")" class="nav-link"><i class="fa fa-fw fa-home"></i> Dashboard</a></li>
         <li class="nav-item">
-            <a href="javascript:;" class="nav-link" data-toggle="collapse" data-target="#inquiries">
-                <i class="fa fa-fw fa-search"></i> Consultas<span class="pull-right"><i class="fa fa-fw fa-caret-down"></i></span>
+            <a href="javascript:;" class="nav-link" data-toggle="collapse" data-target="#operations">
+                <i class="fa fa-fw fa-refresh"></i> Operaciones<span class="pull-right"><i class="fa fa-fw fa-caret-down"></i></span>
             </a>
-            <ul id="inquiries" class="collapse">
-                <li><a href="@Url.Action("Index", "Trabajadores")"><i class="fa bi-person-lines-fill"></i> Consulta trabajadores</a></li>
+            <ul id="operations" class="collapse">
+                <li><a href="@Url.Action("Index", "Trabajadores")"><i class="fa fa-users"></i> Consulta trabajadores</a></li>
             </ul>
-            <ul id="inquiries" class="collapse">
-                <li><a href="@Url.Action("Index", "Planillas")"><i class="fa fa-file"></i> Consulta Planillas</a></li>
+            <ul id="operations" class="collapse">
+                <li><a href="@Url.Action("Generar", "Planillas")"><i class="fa fa-table"></i> Generar planillas</a></li>
             </ul>
         </li>
         <li class="nav-item">
-            <a href="javascript:;" class="nav-link" data-toggle="collapse" data-target="#help">
-                <i class="fa fa-fw fa-refresh"></i> Operaciones<span class="pull-right"><i class="fa fa-fw fa-caret-down"></i></span>
+            <a href="javascript:;" class="nav-link" data-toggle="collapse" data-target="#reports">
+                <i class="fa fa-fw fa-bar-chart"></i> Reportes<span class="pull-right"><i class="fa fa-fw fa-caret-down"></i></span>
             </a>
-            <ul id="help" class="collapse">
-                <li><a href="@Url.Action("Generar", "Planillas")"><i class="fa fa-fw bi-person-lines-fill"></i> Generar obligaciones</a></li>
+            <ul id="reports" class="collapse">
+                <li><a href="@Url.Action("Index", "Planillas")"><i class="fa fa-table"></i> Planillas generadas</a></li>
             </ul>
         </li>
         <li class="nav-item">
@@ -26,7 +26,7 @@
                 <i class="fa fa-fw fa-life-ring"></i> Ayuda<span class="pull-right"><i class="fa fa-fw fa-caret-down"></i></span>
             </a>
             <ul id="help" class="collapse">
-                <li><a href="@Url.Action("Manual", "HelpCenter")"><i class="fa fa-fw fa-book"></i> Manual de usuario</a></li>
+                <li><a href="@Url.Action("Manual", "HelpCenter")"><i class="fa fa-book"></i> Manual de usuario</a></li>
             </ul>
         </li>
     </ul>
@@ -40,13 +40,13 @@
             </a>
         </li>
         <li class="nav-item">
-            <a href="javascript:;" class="nav-link" data-toggle="collapse" title="Consultas" data-target="#inquiries">
-                <i class="fa fa-3x fa-search"></i><br />Consultas
+            <a href="javascript:;" class="nav-link" data-toggle="collapse" title="Operaciones" data-target="#operations">
+                <i class="fa fa-3x fa-refresh"></i><br />Operaciones
             </a>
         </li>
         <li class="nav-item">
-            <a href="javascript:;" class="nav-link" data-toggle="collapse" title="Operaciones" data-target="#operations">
-                <i class="fa fa-3x fa-refresh"></i><br />Operaciones
+            <a href="javascript:;" class="nav-link" data-toggle="collapse" title="Consultas" data-target="#reports">
+                <i class="fa fa-3x fa-bar-chart"></i><br />Reportes
             </a>
         </li>
         <li class="nav-item">
