--- a/src/app/00078-GestionPlanillas/WebApp/Views/Planillas/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Planillas/Index.cshtml
@@ -15,16 +15,41 @@
         </section>
     </div>
 
-    <div class="col-12">
-        @*<a href="@Url.Action("Create", "Concepto", new { tipoPago = ViewBag.TipoPago })" class="btn btn-primary pull-right modal-link">
-            <i class="fa bi-ui-checks-grid"></i> Agregar concepto
-        </a>*@
+    <div class="col-12 mt-4">
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body bg-light-gray">
+                        @using (Html.BeginForm("Index", "Planillas", FormMethod.Get, new { id = "frmConsultaResumenPlanilla" }))
+                        {
+                            <div class="form-row">
+                                <div class="form-group col-lg-2 col-md-4 col-6">
+                                    @Html.Label("anio", "Año", new { @class = "control-label" })
+                                    @Html.DropDownList("anio", ViewBag.ListaAños as SelectList, null, new { @class = "form-control" })
+                                </div>
 
-        <p class="h3"><small>@ViewBag.Title</small></p>
-        <br />
+                                <div class="form-group col-lg-2 col-md-4 col-6">
+                                    @Html.Label("mes", "Mes", new { @class = "control-label" })
+                                    @Html.DropDownList("mes", ViewBag.ListaMeses as SelectList, null, new { @class = "form-control text-uppercase" })
+                                </div>
 
-        <br />
-        <div class="table-responsive" style="min-height:300px">
+                                <div class="form-group col-lg-3 col-md-4 col-6">
+                                    <label for="idCategoria">Categoria</label>
+                                    @Html.DropDownList("idCategoria", ViewBag.ListaCategoriasPlanillas as SelectList, new { @class = "form-control text-uppercase" })
+                                </div>
+
+                                <div class="form-group col-lg-2 col-4">
+                                    <label>&nbsp;</label>
+                                    <button type="submit" class="btn btn-block btn-outline-primary"><i class="fa fa-fw fa-search"></i> Consultar</button>
+                                </div>
+                            </div>
+                        }
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="table-responsive mt-4" style="min-height:300px">
             @Html.Grid(Model).Columns(columns =>
             {
                 columns.Add(c => c.T_CategoriaPlanillaDesc).Titled("Planilla").Css("text-left").Filterable(true);
@@ -44,3 +69,13 @@
 
     </div>
 </div>
+
+<script>
+    $("#frmConsultaResumenPlanilla").on("change", "#anio", function () {
+        let cmbDestino = $('#frmConsultaResumenPlanilla #mes');
+
+        let url = '@Url.Action("ObtenerMesesPorAnio", "General")';
+
+        CargarMeses(this, cmbDestino, url);
+    });
+</script>
