--- a/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
@@ -22,6 +22,14 @@
             </ul>
         </li>
         <li class="nav-item">
+            <a href="javascript:;" class="nav-link" data-toggle="collapse" data-target="#configurations">
+                <i class="fa fa-fw fa-cogs"></i> Configuración<span class="pull-right"><i class="fa fa-fw fa-caret-down"></i></span>
+            </a>
+            <ul id="configurations" class="collapse">
+                <li><a href="@Url.Action("Index", "Conceptos")"><i class="fa fa-cog"></i> Conceptos</a></li>
+            </ul>
+        </li>
+        <li class="nav-item">
             <a href="javascript:;" class="nav-link" data-toggle="collapse" data-target="#help">
                 <i class="fa fa-fw fa-life-ring"></i> Ayuda<span class="pull-right"><i class="fa fa-fw fa-caret-down"></i></span>
             </a>
@@ -47,6 +55,11 @@
         <li class="nav-item">
             <a href="javascript:;" class="nav-link" data-toggle="collapse" title="Consultas" data-target="#reports">
                 <i class="fa fa-3x fa-bar-chart"></i><br />Reportes
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="javascript:;" class="nav-link" data-toggle="collapse" title="Consultas" data-target="#configurations">
+                <i class="fa fa-3x fa-cogs"></i><br />Configuración
             </a>
         </li>
         <li class="nav-item">
