Terminado formulario de mantenimiento de conceptos.

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
@@ -26,7 +26,7 @@
                 <i class="fa fa-fw fa-cogs"></i> Configuración<span class="pull-right"><i class="fa fa-fw fa-caret-down"></i></span>
             </a>
             <ul id="configurations" class="collapse">
-                <li><a href="@Url.Action("Index", "Conceptos")"><i class="fa fa-cog"></i> Conceptos</a></li>
+                <li><a href="@Url.Action("Index", "Conceptos")"><i class="fa bi-ui-checks"></i> Conceptos</a></li>
             </ul>
         </li>
         <li class="nav-item">
