--- a/src/app/00078-GestionPlanillas/WebApp/Views/Planillas/Generar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Planillas/Generar.cshtml
@@ -7,8 +7,8 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb float-right small d-none d-sm-inline-flex">
                     <li class="breadcrumb-item"><a href="@Url.Action("Index", "Home")"><i class="fa fa-home">&nbsp;</i>Inicio</a></li>
-                    <li class="breadcrumb-item"><span><i class="fa bi-tools">&nbsp;</i>Mantenimiento </span></li>
-                    <li class="breadcrumb-item active"><span><i class="fa bi-ui-checks-grid">&nbsp;</i>@ViewBag.Title </span></li>
+                    <li class="breadcrumb-item"><span><i class="fa fa-refresh">&nbsp;</i>Operaciones </span></li>
+                    <li class="breadcrumb-item active"><span><i class="fa fa-table">&nbsp;</i>@ViewBag.Title </span></li>
                 </ol>
             </nav>
             <h1 class="">@ViewBag.Title <small></small></h1>
