--- a/src/app/00078-GestionPlanillas/WebApp/Views/Conceptos/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Conceptos/Index.cshtml
@@ -35,7 +35,7 @@
                             @Html.Raw("<span id=\"td" + @model.conceptoID + "\"><button type=\"submit\" class=\"btn btn-xs btn-secondary\" onclick=\"ChangeStateReloadPage(" + @model.conceptoID + ", " + @model.estaHabilitado.ToString().ToLower() + ", '" + @Url.Action("CambiarEstado", "Conceptos") + "');\"><i class=\"fa fa-minus-circle\">&nbsp;</i><span class=\"d-none d-md-inline-block\">Deshabilitado</span></button></span>"))
                         .Filterable(true).SetWidth(160).Titled("Estado");
                     columns.Add().SetWidth(150).Encoded(false).Sanitized(false).RenderValueAs(model => @<a href="@Url.Action("Editar", "Conceptos", new { id = model.conceptoID })" class="modal-link"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> <span class="d-none d-md-inline-block">Editar</span></a>);
-                }).WithPaging(5).Sortable(true).WithGridItemsCount("Registros encontrados").EmptyText("No se encontraron registros")
+}).WithPaging(5).Sortable(true).WithGridItemsCount("Registros encontrados").EmptyText("No se encontraron registros")
             </div>
         </div>
     </div>
@@ -52,32 +52,16 @@
                 <table class="table table-hover" id="dataTablePlantillaPlanilla">
                     <thead class="thead-dark">
                         <tr>
-                            <th>N°</th>
-                            <th>Clase</th>
-                            <th>Categoria</th>
-                            <th>Conceptos asociados</th>
+                            <th>categoriaPlanillaDesc</th>
+                            <th>plantillaPlanillaDesc</th>
+                            <th>estaHabilitado</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>HABERES</td>
-                            <td>Haberes Administrativo</td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>HABERES</td>
-                            <td>Haberes Docente</td>
-                            <td></td>
-                        </tr>
-                    </tbody>
                     <tfoot>
                         <tr>
-                            <th>N°</th>
-                            <th>Clase</th>
-                            <th>Categoria</th>
-                            <th>Conceptos asociados</th>
+                            <th>categoriaPlanillaDesc</th>
+                            <th>plantillaPlanillaDesc</th>
+                            <th>estaHabilitado</th>
                         </tr>
                     </tfoot>
                 </table>
@@ -86,38 +70,22 @@
     </div>
 </div>
 
-<script>
+@section scripts {
+<script type="text/javascript">
     $(document).ready(function () {
-        $('#dataTablePlantillaPlanilla').DataTable({});
+        generarDatatable();
     });
 
     function generarDatatable() {
-        /*$('#dataTablePlantillaPlanilla').DataTable({
+        $('#dataTablePlantillaPlanilla').DataTable({
             ajax: {
-                'url': 'producciones/get_datatable',
-                'type': 'get',
-                'data': parametros
+                'url': 'http://localhost:1145/PlantillaPlanilla/ObtenerListaPlantillasPlanilla',
+                'type': 'get'
             },
             columns: [
-                { data: 'nro_orden' },
-                { data: 'clase' },
-                { data: 'categoria' },
-                { data: 'id' },
-                { data: 'id' }
-            ],
-            columnDefs: [
-                {
-                    targets: -2,
-                    render: function (data, type, row) {
-                        return '<button class="btn btn-link btnModificar" data-id="' + data + '"><i class="fas fa-edit"></i></button>';
-                    }
-                },
-                {
-                    targets: -1,
-                    render: function (data, type, row) {
-                        return '<button class="btn btn-link btnEliminar" data-id="' + data + '"><i class="fas fa-trash"></i></button>';
-                    }
-                }
+                { data: 'categoriaPlanillaDesc' },
+                { data: 'plantillaPlanillaDesc' },
+                { data: 'estaHabilitado' }
             ],
             "bStateSave": true,
             bDestroy: true,
@@ -141,6 +109,7 @@
                     sortDescending: ": activar para ordenar la columna en orden descendente"
                 }
             }
-        });*/
+        });
     }
-</script>
+    </script>
+}
