Agregado mantenimiento de plantilla de planillas.

--- a/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/_MantenimientoPlantillaPlanilla.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/_MantenimientoPlantillaPlanilla.cshtml
@@ -18,6 +18,7 @@
     {
         @Html.AntiForgeryToken()
         @Html.HiddenFor(model => model.plantillaPlanillaID)
+        @Html.HiddenFor(model => model.estaHabilitado)
         <div class="form-row">
             <div class="col-12">
                 <div class="form-group">
